setup in progress

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -40,6 +45,10 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     //kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     testImplementation 'junit:junit:4.13.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
