--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,6 +35,15 @@ android {
         dataBinding true
         viewBinding true
     }
+
+    kapt {
+        javacOptions {
+            // These options are normally set automatically via the Hilt Gradle plugin, but we
+            // set them manually to workaround a bug in the Kotlin 1.5.20
+            option("-Adagger.fastInit=ENABLED")
+            option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
+        }
+    }
 }
 
 dependencies {
@@ -44,7 +54,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
-    //kapt "com.google.dagger:hilt-compiler:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
@@ -54,6 +64,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.7.2"
     implementation "com.squareup.retrofit2:converter-gson:2.7.2"
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
+
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
     testImplementation 'junit:junit:4.13.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
