--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+# IntelliJ IDEA
+*.iws
+/out/
+
+# User-specific configurations
+.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-local.properties
+/buildSrc/build/
