--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,22 @@ android {
         jvmTarget = '1.8'
     }
 
+    /*dataBinding {
+        enabled = true
+    }*/
+
     buildFeatures {
         dataBinding true
         viewBinding true
+    }
+
+    kapt {
+        javacOptions {
+            // These options are normally set automatically via the Hilt Gradle plugin, but we
+            // set them manually to workaround a bug in the Kotlin 1.5.20
+            option("-Adagger.fastInit=ENABLED")
+            option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
+        }
     }
 }
 
@@ -57,8 +70,15 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.7.2"
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
+    kapt "com.android.databinding:compiler:3.1.4"
+
 
     testImplementation 'junit:junit:4.13.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
