--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
         dataBinding true
         viewBinding true
     }
+
+    kapt {
+        mapDiagnosticLocations = true
+    }
 }
 
 dependencies {
@@ -60,6 +64,10 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha03"
+
+    //implementation "com.github.bumptech.glide:glide:4.12.0"
+    //annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
+    //implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
     testImplementation 'junit:junit:4.13.3'
